--- a/homeassistant/components/zengge/manifest.json
+++ b/homeassistant/components/zengge/manifest.json
@@ -2,7 +2,7 @@
   "domain": "zengge",
   "name": "Zengge",
   "documentation": "https://www.home-assistant.io/integrations/zengge",
-  "requirements": ["zengge==0.2"],
+  "requirements": ["zengge==0.2", "bluepy"],
   "codeowners": [],
   "iot_class": "local_polling"
 }
